typescript/checker/tests/conformance/classes/members/accessibility/classPropertyAsProtected.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            288,
        ),
        hi: BytePos(
            289,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/classPropertyAsProtected.ts:13:5
   |
13 | var c: C;
   |     ^

